task-nginx-unprivileged/ingress-index.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-unprivileged
spec:
  ingressClassName: nginx
  rules:
    - host: mynginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-unprivileged
                port:
                  number: 80
